added about section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="portfolio_wrapper">
-        <div class="container">
+        <div class="portfoilio_container">
             <div class="nav_wrapper">
                 <div class="navbar">
                     <div class="navbar_links">
@@ -30,6 +30,45 @@
                                 <span class="header_scroll_btn_text">Scroll down</span>
                             </span>
                         </a>
+                    </div>
+                </section>
+                <section>
+                    <div class="about_wrapper" id="about">
+                        <div class="about_me">
+                            <div class="about_me_wrapper">
+                                <div class="about_me_wrapper_inner">
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="about_me_wrapper_split">
+                                                <div class="order-1 about_left">
+                                                    <div class="about_left_content">
+                                                        <div class="section_title">
+                                                            <div class="title">
+                                                                Hi, I'm Lokesh
+                                                            </div>
+                                                            <div class="title_desc">
+                                                                Full Stack Web Developer
+                                                            </div>
+
+                                                        </div>
+                                                        <div class="about_text">
+
+                                                            Through constant learning and creation, I produce aesthetic software to the highest standard. I’m largely framework gnostic, technologies I love right now are ReactJs and Styled Components.
+
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="order-2 about_right">
+                                                    <div class="about-img-wrapper">
+                                                        <img class="about-img" src="./images/lokesh_img.jpg" alt="">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </div>
