added a page loader and created index.js

--- a/index.html
+++ b/index.html
@@ -9,51 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link data-n-head="ssr" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,600,800,900&amp;display=swap">
     <link rel="stylesheet" href="./index.css">
-
-    <script>
-        window.addEventListener("DOMContentLoaded", function() {
-            window.addEventListener("scroll", () => {
-                let styleObj = {};
-
-                console.log("scrollY", window.scrollY);
-
-                if (window.scrollY > 64) {
-                    //navElem.style.background = "#000";
-                    styleObj["navbgColor"] = "#000";
-                    styleObj["aColor"] = "rgba(255,255,255,.75)";
-
-                } else if (window.scrollY < 64) {
-                    //navElem.style.background = "none";
-                    styleObj["navbgColor"] = "none";
-                    styleObj["aColor"] = "rgba(255,255,255,.75)";
-                }
-                if (window.scrollY > 440) {
-                    //navElem.style.background = "#fff";
-                    styleObj["navbgColor"] = "#fff";
-                    styleObj["aColor"] = "rgba(15, 15, 15, 0.75)";
-                }
-                console.log(styleObj);
-                handleNavbar(styleObj);
-            });
-
-            function handleNavbar({
-                navbgColor,
-                aColor
-            }) {
-
-                console.log("inhandlenavbarr...", navbgColor, aColor);
-                let navElem = document.querySelector("#nav_wrapper");
-                navElem.style.background = navbgColor;
-                let navlinks = document.querySelectorAll("#navbar_links a");
-                for (var i = 0; i < navlinks.length; ++i) {
-                    navlinks[i].style.color = aColor;
-                }
-            }
-        })
-    </script>
+    <script src="./index.js"></script>
 </head>
 
 <body>
+    <div class="loader_wrapper" id="page_loader_wrapper">
+        <div class="loader"></div>
+    </div>
     <div class="portfolio_wrapper">
         <div class="portfoilio_container">
             <div class="nav_wrapper" id="nav_wrapper">
