reduced project's image quality

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                     </div>
                                     <div class="porfolio_projects_row" style="margin-bottom:8rem">
                                         <div class="portfolio_project_img">
-                                            <img src="./images/netflix_clone.png" alt="netflix clone" class="card_img" style="transform: rotateX(0deg) rotateY(0deg);">
+                                            <img src="./images/netflix_clone_modq.png" alt="netflix clone" class="card_img" style="transform: rotateX(0deg) rotateY(0deg);">
                                         </div>
                                         <div class="portfolio_project_text_right">
                                             <h3 class="portfolio_proj_h3">Netflix Clone</h3>
@@ -105,7 +105,7 @@
 
                                     <div class="porfolio_projects_row reverse-items" style="margin-bottom:8rem">
                                         <div class="portfolio_project_img">
-                                            <img src="./images/what2cook.png" alt="food recipe app" class="card_img" style="transform: rotateX(0deg) rotateY(0deg);">
+                                            <img src="./images/what2cook_modq.png" alt="food recipe app" class="card_img" style="transform: rotateX(0deg) rotateY(0deg);">
                                         </div>
                                         <div class="portfolio_project_text_left">
                                             <h3 class="portfolio_proj_h3">Food Recipe App</h3>
