--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                 <div class="navbar">
                     <div class="navbar_links" id="navbar_links">
                         <a href="#home">HOME</a>
-                        <a href="#portfolio_projects">PORTFOLIO</a>
                         <a href="#about">ABOUT</a>
-                        <a href="./files/Resume_Lokesh (4).pdf" download="Lokesh_Resume.pdf">RESUME</a>
+                        <a href="#portfolio_projects">PORTFOLIO</a>
+                        <a id="resume_link" href="./files/Resume_Lokesh (4).pdf" download="Lokesh_Resume.pdf">RESUME</a>
                     </div>
                 </div>
             </div>
             <div class="header">
                 <section>
                     <div id="home" class="header_wrapper">
-                        <a href="#" class="header_scroll_btn">
+                        <a href="#about" class="header_scroll_btn">
                             <span class="header_scroll_btn_inner">
                                 <i class="fas fa-angle-double-down"></i>
                                 <span class="header_scroll_btn_text">Scroll down</span>
@@ -129,9 +129,9 @@
                                         Explore</div>
                                     <div class="footer_text">
                                         <a href="#home" class="footer_link">Home</a>
-                                        <a href="#portfolio_projects" class="footer_link">Portfolio</a>
                                         <a href="#about" class="footer_link">About</a>
-                                        <a href="./files/Resume_Lokesh (4).pdf" download="
+                                        <a href="#portfolio_projects" class="footer_link">Portfolio</a>
+                                        <a id="resume_link" href="./files/Resume_Lokesh (4).pdf" download="
                                         Resume_Lokesh.pdf" class="footer_link">Resume</a>
                                     </div>
                                 </div>
