--- a/index.html
+++ b/index.html
@@ -46,28 +46,31 @@
                                 <div class="about_me_wrapper_inner">
                                     <div class="container">
                                         <div class="row">
-                                            <div class="about_me_wrapper_split">
-                                                <div class="order-1 about_left">
-                                                    <div class="about_left_content">
-                                                        <div class="section_title">
-                                                            <div class="title">
-                                                                Hi, I'm Lokesh
+                                            <div class="col-xs-12 offset-md-2 col-md-8">
+                                                <div class="row">
+                                                    <div class="order-2 order-md-1 col-md-8 styled-left">
+                                                        <div class="about_left_content">
+                                                            <div class="section_title">
+                                                                <div class="title">
+                                                                    Hi, I'm Lokesh
+                                                                </div>
+                                                                <div class="title_desc">
+                                                                    Full Stack Web Developer
+                                                                </div>
+
                                                             </div>
-                                                            <div class="title_desc">
-                                                                Full Stack Web Developer
+                                                            <div class="about_text">
+
+                                                                Through constant learning and creation, I produce aesthetic software to the highest standard. I’m largely framework gnostic, technologies I love right now are ReactJs and Styled Components.
+
                                                             </div>
-
-                                                        </div>
-                                                        <div class="about_text">
-
-                                                            Through constant learning and creation, I produce aesthetic software to the highest standard. I’m largely framework gnostic, technologies I love right now are ReactJs and Styled Components.
-
                                                         </div>
                                                     </div>
-                                                </div>
-                                                <div class="order-2 about_right">
-                                                    <div class="about-img-wrapper">
-                                                        <img class="about-img" src="./images/lokesh_img.jpg" alt="">
+
+                                                    <div class="order-1 order-md-2 col-md-4 styled-col">
+                                                        <div class="about-img-wrapper">
+                                                            <img class="about-img" src="./images/lokesh_img.jpg" alt="">
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
